SERVER-34662 fix $changeStream parsing to check that its argument is an object